[gd_scene load_steps=5 format=3 uid="uid://b4h2j0u8a4acx"]

[ext_resource type="Script" uid="uid://bh3d4hq1elp40" path="res://scenes/menu/main_menu_scene.gd" id="1_8vsfv"]
[ext_resource type="FontFile" uid="uid://c3h6cwhfap6a" path="res://fonts/PressStart2P-Regular.ttf" id="2_cp53f"]

[sub_resource type="Gradient" id="Gradient_logje"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ahk0m"]
gradient = SubResource("Gradient_logje")

[node name="MainMenuScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vsfv")

[node name="BackgroundControl" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="BackgroundControl"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_ahk0m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleTopLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_cp53f")
theme_override_font_sizes/font_size = 50
text = "Retro Pong"
horizontal_alignment = 1

[node name="TitleBottomLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_cp53f")
theme_override_font_sizes/font_size = 25
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_cp53f")
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_cp53f")
theme_override_font_sizes/font_size = 25
text = "Exit"

[node name="BottomSpacingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
